[package]
name = "rust-podcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.3"
percent-encoding = "2.1"
tokio = { version = "1", features = ["full"] }
podcast_search = "0.5.0"
tokio-util = "0.7.10"
clap = { version = "4.5.4", features = ["derive"] }
xdg = "2.5.2"
color-eyre = "0.6.3"
